--- a/extensions/debug/assets/main.css
+++ b/extensions/debug/assets/main.css
@@ -68,3 +68,14 @@ a.desc:after {
 .sort-ordinal a.desc:after {
 	content: "\e156";
 }
+
+.mail-sorter {
+	margin-top: 7px;
+}
+
+.mail-sorter li {
+	list-style: none;
+	float: left;
+	width: 12%;
+	font-weight: bold;
+}
